<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/AppTheme"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:visibility="visible"
        tools:context="com.example.android.myappportfolio.MainActivity">

        <TextView
            android:id="@+id/titleText"
            style="@style/textTheme"
            android:text="@string/title" />

        <Button
            android:id="@+id/popular_movies"
            style="@style/buttonTheme"
            android:onClick="popularMovies"
            android:text="@string/popular_movies" />

        <Button
            android:id="@+id/stock_hawk"
            style="@style/buttonTheme"
            android:onClick="stockHawk"
            android:text="@string/stock_hawk" />

        <Button
            android:id="@+id/build_it_bigger"
            style="@style/buttonTheme"
            android:onClick="buildItBigger"
            android:text="@string/build_it_bigger" />

        <Button
            android:id="@+id/make_your_app_material"
            style="@style/buttonTheme"
            android:onClick="makeYourAppMaterial"
            android:text="@string/make_your_app_material" />

        <Button
            android:id="@+id/go_ubiquitous"
            style="@style/buttonTheme"
            android:onClick="goUbiquitous"
            android:text="@string/go_ubiquitous" />

        <Button
            android:id="@+id/capstone"
            style="@style/buttonTheme"
            android:onClick="capstone"
            android:text="@string/capstone" />

    </LinearLayout>
</ScrollView>
